Fix autosuggestion background color in dark mode

--- a/scss/components/_autosuggest.scss
+++ b/scss/components/_autosuggest.scss
@@ -35,7 +35,7 @@
 	max-height: 10em;
 	overflow-y: auto;
 	border: 1px solid #aaa;
-	background-color: #fff;
+	background-color: -moz-field;
 	z-index: 2;
 	
 	margin-left: -3px;
